--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,21 +1,42 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
-    /* border: 2px red solid; */
-    /* background-color: blueviolet; */
+.profile_anchor{
+    position: re;
 }
-
 
 .profile-dropdown {
     position: absolute;
-    right: 25px;
-    top: 25px;
+    right: 100px;
+    top: 250px;
 }
 
 .profile_btn{
-    padding: 0 1rem;
+    margin: 0;
+    box-shadow: none;
+    border-radius: 10px;
+    height: 2rem;
+    padding: 0 2rem;
+}
+
+.profile_dropdown_grid{
+    display: grid;
+    grid-template-columns: 1fr 8rem;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
+    background-color: pink;
+}
+
+.profile_dropdown_grid > :first-child{
+    display: grid;
+    border: 1px dashed black;
+    padding: 0 0.5rem;
+    border-radius: 1rem;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+.profile_dropdown_grid > button {
+    width: 75%;
 }
 
 .h-grid{
